--- a/Reports/report.html
+++ b/Reports/report.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">Automation test Report</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Nov 17, 2025 11:53:12 am</span></a>
+<a href="#"><span class="badge badge-primary">Nov 17, 2025 12:42:38 pm</span></a>
 </li>
 </ul>
 </div>
@@ -81,7 +81,7 @@
           <div class="test-detail">
             <p class="name">Login Test</p>
             <p class="text-sm">
-              <span>11:53:12 am</span> / <span>00:00:00:372</span>
+              <span>12:42:39 pm</span> / <span>00:00:00:255</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -90,9 +90,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Login Test</h5>
-<span class='badge badge-success'>11.17.2025 11:53:12 am</span>
-<span class='badge badge-danger'>11.17.2025 11:53:13 am</span>
-<span class='badge badge-default'>00:00:00:372</span>
+<span class='badge badge-success'>11.17.2025 12:42:39 pm</span>
+<span class='badge badge-danger'>11.17.2025 12:42:39 pm</span>
+<span class='badge badge-default'>00:00:00:255</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -105,14 +105,14 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>11:53:12 am</td>
+        <td>12:42:39 pm</td>
         <td>
           Registration link clicked
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>11:53:13 am</td>
+        <td>12:42:39 pm</td>
         <td>
           Username entered
         </td>
@@ -136,13 +136,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Nov 17, 2025 11:53:12 am</h3>
+<h3>Nov 17, 2025 12:42:38 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Nov 17, 2025 11:53:13 am</h3>
+<h3>Nov 17, 2025 12:42:39 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -212,7 +212,7 @@
 </div></div>
 <script>
 var timeline = {
-"Login Test":0.372
+"Login Test":0.255
 };
 </script>
 <div class="row">
